<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="message"
            type="com.example.sendmessagebinding.data.Message" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".iu.ViewMessageActivity">


        <TextView
            android:id="@+id/txvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txvUsuarioMarginTop"
            android:hint="@string/txvUsuarioMint"
            android:minHeight="@dimen/txvUsuarioMinHeight"
            android:text="@string/txvUsuario"
            android:textColorHint="@color/txvUsuarioColorHint"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvUserContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txvUsuarioMarginTop"
            android:hint="@string/txvUsuarioMint"
            android:minHeight="@dimen/txvUsuarioMinHeight"
            android:text="@{message.user.name}"
            android:textColorHint="@color/txvUsuarioColorHint"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txvMensajeEscrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txvMensajeEscritoMarginTop"
            android:hint="@string/txvMensajeEscritoMint"
            android:minHeight="@dimen/txvMensajeEscritoMinHeight"
            android:text="@string/txvMensajeEscrito"
            android:textColorHint="@color/txvUsuarioColorHint"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txvGrandeMarginTop"
            android:hint="@string/txvMensajeEscritoMint"
            android:minHeight="@dimen/txvMensajeEscritoMinHeight"
            android:text="@{message.content}"
            android:textColorHint="@color/txvUsuarioColorHint"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imgMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgMessage"
            app:srcCompat="@drawable/sobre"
            tools:ignore="ImageContrastCheck" />


    </LinearLayout>
</layout>